# cam_template

./: CMakeLists.txt  README.md  main.cpp  profile.h
cam_capture/camera/: commons.h  icamera.h
cam_capture/camera/fake/: fake.cpp  fake.h
cam_capture/camera/web/: web.cpp  web.h
cam_capture/file_handler/: FileHandler.cpp  FileHandler.h
cam_capture/file_saver/: commons.h  istrategy.h  saver.cpp  saver.h
cam_capture/file_saver/saver/: saver.cpp  saver.h
cam_capture/file_saver/str_oneCamOneFile/: OCOF_Save.cpp  OCOF_Save.h
cam_capture/file_saver/strategies/: istrategy.h
cam_capture/file_saver/strategies/oneCamManyFiles/: OCMF_Save.cpp  OCMF_Save.h
cam_capture/file_saver/strategies/oneCamOneFile/: OCOF_Save.cpp  OCOF_Save.h
cam_capture/manager/: commons.h  imanager.h
cam_capture/manager/web/: web.cpp  web.h
cam_capture/utility/: buffer.h
